<resources>
    <string name="app_name">MP3Dev</string>
    <string name="query_hint">Keyword</string>
    <string name="query_hint_main">Search for songs,...</string>
    <string name="volume">Volume</string>
    <string name="back">Back</string>
    <string name="start">Start</string>
    <string name="pause">Pause</string>
    <string name="play">Playing</string>
    <string name="restart">Restart</string>
    <string name="content">Click to close this app</string>
    <string name="title">This app is running</string>
    <string name="title_my_music">My Music</string>
    <string name="title_more">More</string>
    <string name="title_home">Home</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="image1">https://zmp3-photo.zadn.vn/banner/6/7/c/8/67c8eb984cea318df1e97d5530ff1962.jpg</string>
    <string name="image2">https://zmp3-photo.zadn.vn/banner/e/d/1/f/ed1fb87236c9fba1fcb1fc1e2dec2e7a.jpg</string>
    <string name="image3">https://zmp3-photo.zadn.vn/banner/8/1/d/9/81d95747338935636a525de0d17ccd39.jpg</string>
    <string name="image4">https://zmp3-photo.zadn.vn/banner/5/7/4/b/574b36824103a43e51ec7721ad705f9a.jpg</string>
    <string name="image5">https://zmp3-photo.zadn.vn/banner/b/5/3/6/b53667f4f3659a76d7d3d82da6526171.jpg</string>
    <string name="cd_play">Play and Pause</string>
    <string name="cd_next">Skip forwards</string>
    <string name="record_chart">#Record chart</string>
    <string name="recent_listen">#NGHE GẦN ĐÂY</string>
    <string name="hot_likes">#Được yêu thích nhất</string>
    <string name="zingchart_week">#Nổi bật</string>
    <string name="shared_a_mv">shared a MV</string>
    <string name="_1_day_ago">1 day ago</string>
    <string name="mp3dev">MP3Dev</string>
    <string name="tv_content">\'Góc Nhạc Cũ\' sẽ đưa bạn quay ngược thời gian trở lại với những ca khúc Việt một thời quen thuộc ngày nào. Thời gian sẽ trôi qua, nhưng những ca khúc này ...</string>
    <string name="zingmp3">By Zing MP3</string>
    <string name="likes">❤100</string>
    <string name="views">100 Views</string>
    <string name="comment">Comment</string>
    <string name="share">Share</string>
    <string name="view_more">View more</string>
</resources>
