<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/tv_likes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="4dp"
        android:text="@string/likes"
        android:textColor="@color/White"
        android:textSize="@dimen/text_size_medium"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btn_comment"
        android:layout_width="wrap_content"
        android:layout_height="21dp"
        android:layout_marginStart="72dp"
        android:layout_marginTop="4dp"
        android:background="@color/transparent"
        android:text="@string/comment"
        android:textAllCaps="false"
        app:layout_constraintStart_toEndOf="@+id/tv_likes"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btn_share"
        android:layout_width="wrap_content"
        android:layout_height="21dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="4dp"
        android:background="@color/transparent"
        android:text="@string/share"
        android:textAllCaps="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.934"
        app:layout_constraintStart_toEndOf="@+id/btn_comment"
        app:layout_constraintTop_toTopOf="parent" />
</android.support.constraint.ConstraintLayout>