<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_bar">
    <ImageView
        android:id="@+id/img_album_art"
        android:layout_width="@dimen/dimen_album_art"
        android:layout_height="@dimen/dimen_album_art"
        android:layout_gravity="center"/>
    <ImageView
        android:src="@drawable/icon_lyrics"
        android:id="@+id/img_status_bar_icon"
        android:layout_width="@dimen/dimen_album_art"
        android:layout_height="@dimen/dimen_album_art" />
    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical"
        android:paddingStart="@dimen/dimen_button_info"
        android:layout_gravity="center_vertical">
        <TextView
            android:id="@+id/tv_track_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:text="@string/app_name"
            android:textSize="@dimen/text_size_medium"
            android:textStyle="bold"/>
        <TextView
            android:id="@+id/tv_art_name"
            android:textColor="@color/white"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </LinearLayout>
    <ImageButton
        android:layout_marginTop="15dp"
        android:id="@+id/btn_play"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:scaleType="fitXY"
        android:background="?android:selectableItemBackground"
        android:src="@drawable/play"
        android:contentDescription="@string/cd_play" />

    <ImageButton
        android:id="@+id/btn_next"
        android:layout_marginTop="15dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="20dp"
        android:background="?android:selectableItemBackground"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/cd_next"
        android:src="@drawable/next" />
    <ImageButton
        android:id="@+id/btn_collapse_bar"
        android:layout_width="@dimen/dimen_icon_button"
        android:layout_height="@dimen/dimen_icon_button"
        android:background="?android:selectableItemBackground"
        android:scaleType="fitCenter"
        android:src="@drawable/exit" />

</LinearLayout>
